# jax-learning

./: README.md  pyproject.toml  test.py
docs/equinox/: hts-log.txt  index.html
docs/equinox/docs.kidger.site/equinox/: index.html
docs/equinox/docs.kidger.site/equinox/all-of-equinox/: index.html
docs/equinox/docs.kidger.site/equinox/api/caches/: index.html
docs/equinox/docs.kidger.site/equinox/citation/: index.html
docs/equinox/docs.kidger.site/equinox/faq/: index.html
docs/equinox/docs.kidger.site/equinox/tricks/: index.html
docs/equinox/hts-cache/: new.lst  new.txt
docs/jax/: .buildinfo  objects.inv
docs/jax/_downloads/e70836516c331a83dfcd185dd73435fe/: Custom_Operation_for_GPUs.py
docs/jax/_static/: documentation_options.js  searchtools.js
docs/orbax/: cookies.txt  hts-log.txt  index.html
docs/orbax/hts-cache/: new.lst  new.txt
docs/orbax/orbax.readthedocs.io/en/latest/: api_refactor.html  async_checkpointing.html  checkpoint_format.html  checkpointing_pytrees.html  contributors.html  custom_handlers.html  genindex.html  index-2.html  index.html  optimized_checkpointing.html  orbax_checkpoint_101.html  orbax_checkpoint_announcements.html  orbax_checkpoint_api_overview.html  orbax_export_101.html  preemption_checkpointing.html  search.html  searchindex.js  transformations.html
nanogpt/: train.py
src/dit/: model.py  train.py
src/jax_learning/: __init__.py
src/jax_learning/dit/: model.py  train.py
src/jax_learning/nanogpt/: model.py
src/nanogpt/: model.py  train.py  train_example.py
(+105 files in other folders)
